udated readme &  added syllabus

--- a/syllabus.html
+++ b/syllabus.html
@@ -6,8 +6,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="author" content="Prof.&nbsp;Ji-Woong Chung">
 
-<title>readme</title>
+<title>BUSS254(03 and 05) Investments</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,16 +24,16 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="README_files/libs/clipboard/clipboard.min.js"></script>
-<script src="README_files/libs/quarto-html/quarto.js"></script>
-<script src="README_files/libs/quarto-html/popper.min.js"></script>
-<script src="README_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="README_files/libs/quarto-html/anchor.min.js"></script>
-<link href="README_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="README_files/libs/quarto-html/quarto-syntax-highlighting-48ffa3e5b9d089919c6712c39e5b00f2.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="README_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="README_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="README_files/libs/bootstrap/bootstrap-1bc8a17f135ab3d594c857e9f48e611b.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<script src="syllabus_files/libs/clipboard/clipboard.min.js"></script>
+<script src="syllabus_files/libs/quarto-html/quarto.js"></script>
+<script src="syllabus_files/libs/quarto-html/popper.min.js"></script>
+<script src="syllabus_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="syllabus_files/libs/quarto-html/anchor.min.js"></script>
+<link href="syllabus_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="syllabus_files/libs/quarto-html/quarto-syntax-highlighting-48ffa3e5b9d089919c6712c39e5b00f2.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="syllabus_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="syllabus_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="syllabus_files/libs/bootstrap/bootstrap-1bc8a17f135ab3d594c857e9f48e611b.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -43,21 +44,268 @@ ul.task-list li input[type="checkbox"] {
 
 <main class="content" id="quarto-document-content">
 
+<header id="title-block-header" class="quarto-title-block default">
+<div class="quarto-title">
+<h1 class="title">BUSS254(03 and 05) Investments</h1>
+</div>
 
 
 
-<section id="buss254-investments" class="level1">
-<h1>BUSS254: Investments</h1>
+<div class="quarto-title-meta">
+
+    <div>
+    <div class="quarto-title-meta-heading">Author</div>
+    <div class="quarto-title-meta-contents">
+             <p>Prof.&nbsp;Ji-Woong Chung </p>
+          </div>
+  </div>
+    
+  
+    
+  </div>
+  
+
+
+</header>
+
+
+<section id="course-information" class="level2" data-number="1">
+<h2 data-number="1" class="anchored" data-anchor-id="course-information"><span class="header-section-number">1</span> Course Information</h2>
+<p><strong>Time and Venue:</strong><br>
+- <strong>(S03)</strong> Mondays, 15:00 – 17:45 (HM B301)<br>
+- <strong>(S05)</strong> Mondays, 10:30 – 13:15 (HM B301)</p>
+<p><strong>Instructor:</strong> Ji-Woong Chung<br>
+- <strong>Office:</strong> 503, Main Building<br>
+- <strong>Office Hours:</strong> By appointment (via email)<br>
+- <strong>Email:</strong> <a href="mailto:chung_jiwoong@korea.ac.kr">chung_jiwoong@korea.ac.kr</a></p>
+<p><strong>Teaching Assistant:</strong> Jae-Kyung Kim<br>
+- <strong>Email:</strong> <a href="mailto:kjknal77@naver.com">kjknal77@naver.com</a></p>
 <hr>
+</section>
+<section id="textbook-and-course-materials" class="level2" data-number="2">
+<h2 data-number="2" class="anchored" data-anchor-id="textbook-and-course-materials"><span class="header-section-number">2</span> Textbook and Course Materials</h2>
 <ul>
-<li><p>If you find any typos, errors, or areas for improvement, please email me, submit a pull request, or report them on the discussion board.</p></li>
-<li><p>Lecture notes are continuously updated. Please check for the latest version before each class.</p></li>
+<li>Lecture materials are available at the <strong>course GitHub repository</strong>: <a href="https://github.com/chung-jiwoong/BUSS254-Slides">https://github.com/chung-jiwoong/BUSS254-Slides</a></li>
 </ul>
 <hr>
-<p>Lecture1: Introduction and Overview <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/chapter_intro/chapter_intro.html">Lecture Note</a> / <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/problem_intro/problem_intro.html">Problem Set</a> / <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/solution_intro/solution_intro.html">Solution</a></p>
-<p>Lecture2: Financial Markets 1 (Money Markets) <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/chapter_market1/chapter_market1.html">Lecture Note</a> / <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/problem_market1/problem_market1.html">Problem Set</a> / <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/solution_market1/solution_market1.html">Solution</a></p>
-<p>Lecture3: Financial Markets 2 (Capital Markets) <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/chapter_market2/chapter_market2.html">Lecture Note</a></p>
-<p>Lecture4: Financial Markets 3 (Trading &amp; Investment Companies) <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/chapter_market3/chapter_market3.html">Lecture Note</a> / <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/problem_market3/problem_market3.html">Problem Set</a> / <a href="https://raw.githack.com/chung-jiwoong/BUSS254-Slides/refs/heads/main/solution_market3/solution_market3.html">Solution</a></p>
+</section>
+<section id="prerequisite" class="level2" data-number="3">
+<h2 data-number="3" class="anchored" data-anchor-id="prerequisite"><span class="header-section-number">3</span> Prerequisite</h2>
+<ul>
+<li><strong>Recommended:</strong> BUSS207 (Financial Management)</li>
+</ul>
+<hr>
+</section>
+<section id="course-objectives" class="level2" data-number="4">
+<h2 data-number="4" class="anchored" data-anchor-id="course-objectives"><span class="header-section-number">4</span> Course Objectives</h2>
+<p>This course provides an overview of <strong>modern financial markets and instruments</strong>, introducing fundamental <strong>valuation principles and financial theories</strong> essential for understanding <strong>asset prices and investments</strong>.</p>
+<p>Topics include:<br>
+- Financial market structures<br>
+- Fixed income securities<br>
+- Derivative instruments<br>
+- Portfolio theory<br>
+- Capital asset pricing models</p>
+<hr>
+</section>
+<section id="grading" class="level2" data-number="5">
+<h2 data-number="5" class="anchored" data-anchor-id="grading"><span class="header-section-number">5</span> Grading</h2>
+<p>Your final grade will be based on:<br>
+- <strong>Midterm exam (40%)</strong> and <strong>Final exam (50%)</strong><br>
+- <strong>Class discussion and participation (10%)</strong><br>
+- <strong>Optional Presentation (+5% extra credit, maximum)</strong></p>
+<section id="exams-40-50" class="level3" data-number="5.1">
+<h3 data-number="5.1" class="anchored" data-anchor-id="exams-40-50"><span class="header-section-number">5.1</span> Exams (40% + 50%)</h3>
+<ul>
+<li>One <strong>midterm exam</strong> and one <strong>final exam</strong> will be conducted <strong>in-class via Blackboard</strong>.<br>
+</li>
+<li>The <strong>final exam is not cumulative</strong>.<br>
+</li>
+<li>Absences from exams will only be excused for <strong>serious medical reasons</strong>, with a doctor’s note.<br>
+</li>
+<li><strong>No make-up exams</strong> will be provided for any other reasons.</li>
+</ul>
+<p><strong>Tentative Exam Schedule:</strong><br>
+- <strong>Midterm Exam:</strong> Monday, April 21st, 18:30 – 20:30<br>
+- <strong>Final Exam:</strong> Thursday, June 16th, 18:30 – 20:30</p>
+</section>
+<section id="class-discussion-and-participation-10" class="level3" data-number="5.2">
+<h3 data-number="5.2" class="anchored" data-anchor-id="class-discussion-and-participation-10"><span class="header-section-number">5.2</span> Class Discussion and Participation (10%)</h3>
+<ul>
+<li>Active participation is <strong>highly encouraged</strong> both <strong>in class</strong> and in the <strong>online discussion board</strong>.<br>
+</li>
+<li>Students are expected to <strong>ask questions, answer classmates’ questions, and engage in discussions.</strong></li>
+</ul>
+</section>
+<section id="optional-individual-or-team-presentation-5" class="level3" data-number="5.3">
+<h3 data-number="5.3" class="anchored" data-anchor-id="optional-individual-or-team-presentation-5"><span class="header-section-number">5.3</span> Optional Individual or Team Presentation (+5%)</h3>
+<ul>
+<li>Students may choose a topic related to financial markets and investments for their presentation.</li>
+</ul>
+<p><strong>Presentation Guidelines:</strong><br>
+- Work <strong>individually or in teams</strong> (self-formed).<br>
+- <strong>First-come, first-served</strong> for topic selection.<br>
+- Each presentation should be <strong>no longer than 15 minutes</strong>.<br>
+- <strong>Evaluation Breakdown:</strong><br>
+- <strong>50%</strong>: Peer evaluation by classmates<br>
+- <strong>50%</strong>: Instructor evaluation</p>
+<p><strong>Presentation Submission Requirement:</strong><br>
+- Upload presentation materials to the <strong>GitHub Discussion Board</strong> <strong>at least 2 days before the presentation date</strong>.</p>
+<hr>
+</section>
+</section>
+<section id="academic-misconduct" class="level2" data-number="6">
+<h2 data-number="6" class="anchored" data-anchor-id="academic-misconduct"><span class="header-section-number">6</span> Academic Misconduct</h2>
+<ul>
+<li>Academic misconduct <strong>results in automatic failure</strong> and triggers <strong>university-mandated sanctions</strong>.<br>
+</li>
+<li>Any suspected misconduct will be reported to the <strong>Department and Committee on Academic Misconduct</strong>.<br>
+</li>
+<li><strong>Academic misconduct includes but is not limited to</strong>:
+<ul>
+<li>Cheating or sharing information during exams<br>
+</li>
+<li>Plagiarism in any submitted work</li>
+</ul></li>
+</ul>
+<hr>
+</section>
+<section id="grading-appeals" class="level2" data-number="7">
+<h2 data-number="7" class="anchored" data-anchor-id="grading-appeals"><span class="header-section-number">7</span> Grading Appeals</h2>
+<ul>
+<li>Students may appeal exam grading by <strong>submitting a written explanation</strong> via email <strong>within two weeks</strong> after grades are released.<br>
+</li>
+<li><strong>Unjustified requests for grade changes are prohibited</strong> under the <strong>Kim Young-ran Act (Improper Solicitation and Graft Act).</strong></li>
+</ul>
+<hr>
+</section>
+<section id="course-schedule-and-readings" class="level2" data-number="8">
+<h2 data-number="8" class="anchored" data-anchor-id="course-schedule-and-readings"><span class="header-section-number">8</span> Course Schedule and Readings</h2>
+<p><em>The following schedule is tentative and subject to change.</em></p>
+<p><strong>Public holidays:</strong><br>
+- <strong>March 3</strong> (Independence Day)<br>
+- <strong>May 5</strong> (Children’s Day)</p>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th><strong>Week</strong></th>
+<th><strong>Session</strong></th>
+<th><strong>Topic</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td>1</td>
+<td>Introduction and overview</td>
+</tr>
+<tr class="even">
+<td></td>
+<td>2</td>
+<td>Money markets</td>
+</tr>
+<tr class="odd">
+<td>2</td>
+<td>3</td>
+<td>Capital markets</td>
+</tr>
+<tr class="even">
+<td></td>
+<td>4</td>
+<td>Fixed income securities (Part 1)</td>
+</tr>
+<tr class="odd">
+<td>3</td>
+<td>5</td>
+<td>Fixed income securities (Part 2)</td>
+</tr>
+<tr class="even">
+<td></td>
+<td>6</td>
+<td>Derivatives (Part 1)</td>
+</tr>
+<tr class="odd">
+<td>4</td>
+<td>7</td>
+<td>Review or Buffer session</td>
+</tr>
+<tr class="even">
+<td></td>
+<td>8</td>
+<td><strong>Midterm Exam: April 21</strong></td>
+</tr>
+<tr class="odd">
+<td>5</td>
+<td>9</td>
+<td>Derivatives (Part 2)</td>
+</tr>
+<tr class="even">
+<td></td>
+<td>10</td>
+<td>Portfolio theory (Part 1)</td>
+</tr>
+<tr class="odd">
+<td>6</td>
+<td>11</td>
+<td>Portfolio theory (Part 2)</td>
+</tr>
+<tr class="even">
+<td></td>
+<td>12</td>
+<td>The Capital Asset Pricing Model</td>
+</tr>
+<tr class="odd">
+<td>7</td>
+<td>13</td>
+<td>The Arbitrage Pricing Model</td>
+</tr>
+<tr class="even">
+<td></td>
+<td>14</td>
+<td>Market efficiency</td>
+</tr>
+<tr class="odd">
+<td>8</td>
+<td>15</td>
+<td>Review or Buffer session</td>
+</tr>
+<tr class="even">
+<td></td>
+<td>16</td>
+<td><strong>Final Exam: June 16</strong></td>
+</tr>
+</tbody>
+</table>
+<hr>
+</section>
+<section id="students-with-disabilities" class="level2" data-number="9">
+<h2 data-number="9" class="anchored" data-anchor-id="students-with-disabilities"><span class="header-section-number">9</span> Students with Disabilities</h2>
+<ul>
+<li>If you require <strong>accommodations</strong> due to a disability, notify the instructor <strong>immediately</strong> to make necessary arrangements.</li>
+</ul>
+<hr>
+</section>
+<section id="course-policies" class="level2" data-number="10">
+<h2 data-number="10" class="anchored" data-anchor-id="course-policies"><span class="header-section-number">10</span> Course Policies</h2>
+<section id="copyright-law" class="level3" data-number="10.1">
+<h3 data-number="10.1" class="anchored" data-anchor-id="copyright-law"><span class="header-section-number">10.1</span> Copyright Law</h3>
+<ul>
+<li><strong>Course materials and lectures are protected by copyright law.</strong><br>
+</li>
+<li>Materials are for <strong>personal use and study only</strong>.<br>
+</li>
+<li><strong>Do not share, distribute, or sell</strong> course materials in <strong>print or digital format</strong> without permission.<br>
+</li>
+<li><strong>Recording lectures (audio/video) is prohibited</strong> unless permission is obtained from the instructor.</li>
+</ul>
+</section>
+<section id="anti-graft-law" class="level3" data-number="10.2">
+<h3 data-number="10.2" class="anchored" data-anchor-id="anti-graft-law"><span class="header-section-number">10.2</span> Anti-Graft Law</h3>
+<ul>
+<li><strong>Do not request grade changes</strong> unless there is a <strong>clear grading error</strong>.<br>
+</li>
+<li><strong>Unjustified requests violate the Improper Solicitation and Graft Act (Kim Young-ran Act).</strong></li>
+</ul>
+</section>
 </section>
 
 </main>
